# leanstack

./: .gitignore  CURRENT_STATUS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  COMPARISON_PROTOCOL.md  DSA_VIS_PROOF_PROTOCOL.md  EXECUTION_PLAN.md  FP4_COMPILER_GATE.md  FP4_STACK_DIFF_20260312.md  IMPLEMENTATION_GAPS.md  LEANPACK_FORMAT.md  MODEL_FIT_ANALYSIS.md  MODEL_TARGETS.md  PERFORMANCE_OPTIMIZATION.md  PRECISION_GATES.md  PROJECT_THESIS.md  REFERENCES.md  REMOTE_VALIDATION.md  ROADMAP.md  THROUGHPUT_30_PLAN.md
runtime_support/: sitecustomize.py
scripts/: collect_remote_probe.py  fetch_modelscope_snapshot.py  push_local_file_to_remote.sh  relay_url_to_remote.sh  remote_bootstrap.sh  remote_dual_spec_benchmark.sh  remote_fetch_draft_model.sh  remote_fit_draft_head.sh  remote_fp4_gate.sh  remote_fp4_inventory.sh  remote_glm_baseline.sh  remote_helpers.sh  remote_install_runtime.sh  remote_install_vllm.sh  remote_leanpack_build.sh  remote_leanpack_build_draft.sh  remote_leanserve_layout.sh  remote_leanstack_benchmark.sh  remote_leanstack_profile_sweep.sh  remote_model_baseline.sh  remote_model_probe.sh  remote_modelscope_fetch.sh  remote_openai_backend_benchmark.sh  remote_openai_profile_sweep.sh  remote_precision_gate.sh  remote_qwen_baseline.sh  remote_qwen_block_probe.sh  remote_qwen_fetch.sh  remote_qwen_hot_kernel_bench.sh  remote_qwen_runtime_loop.sh  remote_qwen_semantic_block_probe.sh  remote_qwen_stack_probe.sh  remote_sync.sh  remote_verify.sh  remote_vllm_serve.sh  render_benchmark_report.py  run_contract_benchmark_report.py  (+2 more)
(+64 files in other folders)
