[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanstack"
version = "0.1.0"
description = "Clean-slate, TileIR-first LLM inference stack bring-up."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
leanstack = "leanstack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
